Wizard: Harden authoring and player packaging